Initial commit: MRCA Students Hub frontend

--- a/vercel.json
+++ b/vercel.json
@@ -16,9 +16,7 @@
       "dest": "/index.html"
     }
   ],
-  "env": {
-    "VITE_API_URL": "https://new-4rqi.onrender.com/api"
-  },
   "buildCommand": "npm run build",
-  "outputDirectory": "dist"
+  "outputDirectory": "dist",
+  "installCommand": "npm install"
 }
